--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "754676cd",
+   "id": "c7d1710d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "28e05d8c",
+   "id": "84c0d36b",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f391c83",
+   "id": "06d4bb3a",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5011da63",
+   "id": "adc139ed",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76fd1de6",
+   "id": "c3268486",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b1c0295",
+   "id": "da7f0ffb",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b725a32",
+   "id": "f40e098e",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d8270fbb",
+   "id": "699cf604",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda7d678",
+   "id": "aebdde26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44376ca1",
+   "id": "20db8af1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0ca52c5c",
+   "id": "de244fc2",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7ad269",
+   "id": "c8063ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,13 +236,21 @@
     "elif int(y) < x:\n",
     "    print(\"Too low! Try again!\")\n",
     "elif int(y) > x:\n",
-    "    print(\"Too high!\")\n"
+    "    print(\"Too high!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3707d498",
+   "id": "b778ed51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd0a3144",
    "metadata": {},
    "outputs": [],
    "source": []
