--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "57691434",
+   "id": "57b85f3c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "42cec6ad",
+   "id": "d3965ef3",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "98761308",
+   "id": "cda9d97e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54e26dc",
+   "id": "dbe12e96",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "397fc980",
+   "id": "a62dabb9",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7993e6f7",
+   "id": "cb1c8d98",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "42d9f1fa",
+   "id": "ca269fae",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ee33e30c",
+   "id": "b1853288",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "13f3866a",
+   "id": "50542261",
    "metadata": {},
    "outputs": [
     {
@@ -184,18 +184,23 @@
     }
    ],
    "source": [
-    "number = input(\"enter the integer number : \")\n",
-    "number = int (number)\n",
-    "number2 = input{'guess the number you entered : '}\n",
+    "# number = input(\"enter the integer number : \")\n",
+    "# number = int (number)\n",
+    "nu\n",
+    "number2 = input{'guess the number : '}\n",
     "number2 = int (number2)\n",
     "if number == number2 :\n",
-    "    print (number)"
+    "    print ('you got it !')\n",
+    "elif number2 < number :\n",
+    "    print('Wrong, too low !')\n",
+    "else :\n",
+    "    print('Wrong, too high !')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e26415e",
+   "id": "fb924245",
    "metadata": {},
    "outputs": [],
    "source": []
