--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "93990233",
+   "id": "38ac4abe",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "88c2015c",
+   "id": "ecf84062",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "10e8b5ce",
+   "id": "323deacf",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1ad1d930",
+   "id": "a3a48e79",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "31076cd5",
+   "id": "21128d79",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3486bd49",
+   "id": "36e0e195",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c34d1a5e",
+   "id": "e1493bae",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fd399e62",
+   "id": "0a42f499",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9cd055d5",
+   "id": "e3da05aa",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3ff8a1e8",
+   "id": "d20d670b",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1ab13c81",
+   "id": "90f59f10",
    "metadata": {},
    "outputs": [
     {
@@ -261,17 +261,21 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "21c0300b",
+   "id": "f497ba8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=10"
+    "x=37\n",
+    "guess=input(\"Guess a number from 0 to 100\")\n",
+    "if guess==x:\n",
+    "    print(\"Congrats you got it\")\n",
+    "elif guess>x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e30732",
+   "id": "129a753d",
    "metadata": {},
    "outputs": [],
    "source": []
