--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a3597974",
+   "id": "3ca67d12",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2f8c3f58",
+   "id": "5e7a42bf",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3b14c6bc",
+   "id": "97a3d264",
    "metadata": {},
    "outputs": [
     {
@@ -378,14 +378,20 @@
     "x = 100\n",
     "print (x)\n",
     "number = input('Enter the number: ')\n",
-    "if x=='100':\n",
-    "    print"
+    "if x == '100':\n",
+    "    print('You got it!')\n",
+    "elif x < '100':\n",
+    "    print('Too low!')\n",
+    "elif x > '100':\n",
+    "    print('Too high!')\n",
+    "else:\n",
+    "    print('N')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05066e18",
+   "id": "b9053446",
    "metadata": {},
    "outputs": [],
    "source": []
