--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e2b33c84",
+   "id": "522ab5a0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c943343",
+   "id": "dc4fbb28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "28d85b20",
+   "id": "58681b41",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ca538ad7",
+   "id": "14090def",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2549ed7e",
+   "id": "3ad2a324",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f272323",
+   "id": "72b8da01",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf147c99",
+   "id": "1d0b7cc3",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8f2f5b93",
+   "id": "b714b3a0",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c00df7c",
+   "id": "7623027e",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "69141c21",
+   "id": "8a76ef52",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a0c7e3a",
+   "id": "f37b5b0a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1dda86c0",
+   "id": "fb390290",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "20e57d0a",
+   "id": "80ec9721",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d9d2cae4",
+   "id": "d008df94",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "575f2a56",
+   "id": "0cf81457",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "67ee4f3a",
+   "id": "5b6657a9",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5afd6ae4",
+   "id": "ca25a02a",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c875b57c",
+   "id": "1ac8f716",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bf06b76b",
+   "id": "88ab3378",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ba3c1090",
+   "id": "f43c3eed",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8780da7b",
+   "id": "09e4fb5d",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5f30663c",
+   "id": "9fe95d4c",
    "metadata": {},
    "outputs": [
     {
@@ -476,22 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "ad946664",
+   "execution_count": 69,
+   "id": "16256c85",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guess what is the number between 0 and 20?5\n",
-      "Good guess!\n"
+      "Guess what is the number between 0 and 20?: 9\n",
+      "Too high\n"
      ]
     }
    ],
    "source": [
     "number = 5\n",
-    "guess = int(input('Guess what is the number between 0 and 20?'))\n",
+    "guess = int(input('Guess what is the number between 0 and 20?: '))\n",
     "if guess==number:\n",
     "    print('Good guess!')\n",
     "elif guess > number:\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4fb21e",
+   "id": "dbd1d442",
    "metadata": {},
    "outputs": [],
    "source": []
