--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8715651f",
+   "id": "efd046dc",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f79aaf70",
+   "id": "5207cc20",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62d9af90",
+   "id": "8ead990b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f90f8219",
+   "id": "30b28d4e",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1b0eaaa0",
+   "id": "2ef2bbaf",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "163959ca",
+   "id": "047bcbba",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "22a2cf88",
+   "id": "29dfdb35",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "48b54392",
+   "id": "85d7409c",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "x = input ('Enter a number: ')\n",
+    "x = int input ('Enter a number: ')\n",
     "if x == 10 :\n",
     "    print('you got it')\n",
     "elif x < 10 :\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d668b094",
+   "id": "09157fdd",
    "metadata": {},
    "outputs": [],
    "source": []
