--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6d5600",
+   "id": "8961d3a4",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d746b29f",
+   "id": "b0ad69b9",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3134cacd",
+   "id": "f36bb5b3",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2ea83324",
+   "id": "573a0a00",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c266d508",
+   "id": "4c96444e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9cb47cb5",
+   "id": "0e40197a",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b964f5fe",
+   "id": "14eb719d",
    "metadata": {},
    "outputs": [
     {
@@ -222,27 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "8041f45c",
+   "execution_count": null,
+   "id": "8f662acc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  Ops! a hint\n",
-      "what was the number: \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m  Ops! a hint\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwhat was the number: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mguess\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m number:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou got it!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "50  Ops! a hint\n"
      ]
     }
    ],
@@ -250,23 +238,23 @@
     "number = 50\n",
     "print(f'{number}  Ops! a hint')\n",
     "guess = input('what was the number: ')\n",
-    "if guess = '':\n",
-    "    \n",
-    "guess = int(guess)\n",
+    "if guess == '':\n",
+    "    print('No more guress!')\n",
+    "else:\n",
+    "    guess = int(guess)\n",
+    "\n",
     "if guess == number:\n",
     "    print('You got it!')\n",
     "elif guess < number:\n",
     "    print('Too low!')\n",
     "elif guess > number:\n",
-    "    print('Too high!')\n",
-    "else:\n",
-    "    print('No more guress!')"
+    "    print('Too high!')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa42ede",
+   "id": "468681ae",
    "metadata": {},
    "outputs": [],
    "source": []
