--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cc0912ca",
+   "id": "77afe462",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7cb2db88",
+   "id": "351c0473",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d052eab0",
+   "id": "3df8a313",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536e10e1",
+   "id": "b93faff8",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "580c9e20",
+   "id": "433b5ea6",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5ec2cef",
+   "id": "5a03796b",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dbb9ec94",
+   "id": "e2293dbd",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "756ce7a7",
+   "id": "dbf52992",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "392b0e1e",
+   "id": "739e122e",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6ed401ed",
+   "id": "c20ae5f3",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "25a3cc28",
+   "id": "623cf953",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5379225c",
+   "id": "f0b514a0",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a7f587ca",
+   "id": "f30949ba",
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "29db198e",
+   "execution_count": 59,
+   "id": "227d17c5",
    "metadata": {},
    "outputs": [
     {
@@ -288,8 +288,9 @@
      "output_type": "stream",
      "text": [
       "Hint: 5\n",
-      "Guess the number:5\n",
-      "You've got it!\n"
+      "Guess the number:3\n",
+      "<class 'int'>\n",
+      "Too low!\n"
      ]
     }
    ],
@@ -298,19 +299,19 @@
     "print(f'Hint: {num}')\n",
     "x = input('Guess the number:')\n",
     "x = int(x)\n",
-    "printype(x)\n",
+    "print(type(x))\n",
     "if x>num:\n",
     "    print('Too high!')\n",
     "elif x<num:\n",
     "    print('Too low!')\n",
     "else:\n",
-    "    print('You\\'ve got it!')"
+    "    print('You got it!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50942706",
+   "id": "d95d9f07",
    "metadata": {},
    "outputs": [],
    "source": []
