--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "57b85f3c",
+   "id": "c7346ff8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3965ef3",
+   "id": "2c08c302",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cda9d97e",
+   "id": "e24391af",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe12e96",
+   "id": "61df6c4c",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a62dabb9",
+   "id": "955b24cf",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb1c8d98",
+   "id": "58bc7e5b",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ca269fae",
+   "id": "e44e53d9",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b1853288",
+   "id": "f5a3ff91",
    "metadata": {},
    "outputs": [
     {
@@ -169,27 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "50542261",
+   "execution_count": 46,
+   "id": "0d10992b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the integer number : 32\n",
-      "32\n",
-      "64\n"
+      "guess the number : 2\n",
+      "Wrong, too low !\n"
      ]
     }
    ],
    "source": [
     "# number = input(\"enter the integer number : \")\n",
     "# number = int (number)\n",
-    "nu\n",
-    "number2 = input{'guess the number : '}\n",
+    "number = 32\n",
+    "number2 = input('guess the number : ')\n",
     "number2 = int (number2)\n",
-    "if number == number2 :\n",
+    "if number2 == number :\n",
     "    print ('you got it !')\n",
     "elif number2 < number :\n",
     "    print('Wrong, too low !')\n",
@@ -200,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb924245",
+   "id": "3237d343",
    "metadata": {},
    "outputs": [],
    "source": []
