--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "38ac4abe",
+   "id": "38c988b9",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ecf84062",
+   "id": "4845db85",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "323deacf",
+   "id": "3ba97a25",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a3a48e79",
+   "id": "8462fd3b",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21128d79",
+   "id": "92e4bea6",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "36e0e195",
+   "id": "8c8671cf",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e1493bae",
+   "id": "e6d6c515",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0a42f499",
+   "id": "d4312678",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e3da05aa",
+   "id": "5fc3d01f",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d20d670b",
+   "id": "23da9aa9",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "90f59f10",
+   "id": "7134d54f",
    "metadata": {},
    "outputs": [
     {
@@ -260,8 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "f497ba8e",
+   "execution_count": null,
+   "id": "1fc054a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,13 +269,19 @@
     "guess=input(\"Guess a number from 0 to 100\")\n",
     "if guess==x:\n",
     "    print(\"Congrats you got it\")\n",
-    "elif guess>x"
+    "elif guess>x:\n",
+    "    print(\"To highe\")\n",
+    "elif guess<x:\n",
+    "    print(\"To low\")\n",
+    "else :\n",
+    "    print(\"Thats it you hade one guess\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129a753d",
+   "id": "54222fc4",
    "metadata": {},
    "outputs": [],
    "source": []
