--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3ca67d12",
+   "id": "a756baa2",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5e7a42bf",
+   "id": "e3855a01",
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "97a3d264",
+   "execution_count": 78,
+   "id": "d7dea6cf",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,8 @@
      "output_type": "stream",
      "text": [
       "100\n",
-      "Enter the number: 20\n"
+      "Enter the number: 101\n",
+      "Too low!\n"
      ]
     }
    ],
@@ -378,20 +379,20 @@
     "x = 100\n",
     "print (x)\n",
     "number = input('Enter the number: ')\n",
-    "if x == '100':\n",
+    "if number == 'x':\n",
     "    print('You got it!')\n",
-    "elif x < '100':\n",
+    "elif number < 'x':\n",
     "    print('Too low!')\n",
-    "elif x > '100':\n",
+    "elif number > 'x':\n",
     "    print('Too high!')\n",
     "else:\n",
-    "    print('N')"
+    "    print('No more guesses')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9053446",
+   "id": "e1a5b210",
    "metadata": {},
    "outputs": [],
    "source": []
