--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -139,15 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "db1455e6",
+   "execution_count": 41,
+   "id": "54444126",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I chosed a number, try to guess it: 60\n",
+      "I chose a number, try to guess it: 55\n",
       "too high!\n"
      ]
     }
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0637b8d",
+   "id": "cc95c60e",
    "metadata": {},
    "outputs": [],
    "source": []
